k8s/apps/internal/auth/lldap/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://lldap.internal.ticklethepanda.co.uk
    gethomepage.dev/name: LLDAP
    gethomepage.dev/group: Administration
    gethomepage.dev/icon: lldap
    gethomepage.dev/description: User directory
    gethomepage.dev/pod-selector: app=lldap
spec:
  entryPoints:
    - int-web-secure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`lldap.internal.ticklethepanda.co.uk`)
      services:
        - name: lldap-service
          namespace: lldap
          port: 80
